[gd_scene load_steps=7 format=3 uid="uid://dswgpxf3f2okk"]

[ext_resource type="PackedScene" uid="uid://bb1p0i0peifqd" path="res://scenes/grid.tscn" id="1_gau11"]
[ext_resource type="PackedScene" uid="uid://bt2c7m4tqe1i6" path="res://scenes/laser.tscn" id="3_pjsr2"]
[ext_resource type="Script" path="res://scripts/laser_direction.gd" id="4_yr7pc"]
[ext_resource type="Script" path="res://scripts/game_manager.gd" id="5_xgixn"]
[ext_resource type="Texture2D" uid="uid://djrw1iarhqs2n" path="res://assets/mirror.png" id="6_l074r"]
[ext_resource type="Script" path="res://scripts/inventory_button.gd" id="7_eyvdu"]

[node name="Game" type="Node2D"]

[node name="Grid" parent="." instance=ExtResource("1_gau11")]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(266, 129)
zoom = Vector2(2.3, 2.3)

[node name="NewLaser" parent="." instance=ExtResource("3_pjsr2")]
position = Vector2(47, 84)
script = ExtResource("4_yr7pc")

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("5_xgixn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 0
offset_left = 17.0
offset_top = 2.0
offset_right = 108.0
offset_bottom = 288.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = 1.0
offset_top = 2.0
offset_right = 88.0
offset_bottom = 130.0

[node name="InventoryButton" type="TextureButton" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_l074r")
script = ExtResource("7_eyvdu")

[node name="InventoryButton2" type="TextureButton" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_l074r")
script = ExtResource("7_eyvdu")

[node name="InventoryButton3" type="TextureButton" parent="Control/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("6_l074r")
script = ExtResource("7_eyvdu")

[connection signal="button_down" from="Control/Panel/HBoxContainer/InventoryButton" to="Control/Panel/HBoxContainer/InventoryButton" method="_on_button_down"]
[connection signal="button_up" from="Control/Panel/HBoxContainer/InventoryButton" to="Control/Panel/HBoxContainer/InventoryButton" method="_on_button_up"]
[connection signal="button_down" from="Control/Panel/HBoxContainer/InventoryButton2" to="Control/Panel/HBoxContainer/InventoryButton2" method="_on_button_down"]
[connection signal="button_up" from="Control/Panel/HBoxContainer/InventoryButton2" to="Control/Panel/HBoxContainer/InventoryButton2" method="_on_button_up"]
[connection signal="button_down" from="Control/Panel/HBoxContainer/InventoryButton3" to="Control/Panel/HBoxContainer/InventoryButton3" method="_on_button_down"]
[connection signal="button_up" from="Control/Panel/HBoxContainer/InventoryButton3" to="Control/Panel/HBoxContainer/InventoryButton3" method="_on_button_up"]
